# rust_json_schema-rb

./: .gitignore  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  rust_json_schema.gemspec
.github/workflows/: build-gems.yml  main.yml
ext/rust_json_schema/: Cargo.toml  extconf.rb
ext/rust_json_schema/src/: lib.rs
lib/: rust_json_schema.rb
lib/rust_json_schema/: version.rb
sig/: rust_json_schema.rbs
spec/: memory_usage_support.rb  rust_json_schema_spec.rb  spec_helper.rb
spec/support/: test_schemas.rb
