[package]
name = "rust_json_schema"
version = "0.1.0"
edition = "2021"
authors = ["Taylor Thurlow <thurlow@hey.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
jsonschema = { version = "0.17.1", features = ["draft201909", "draft202012"] }
reqwest = { version = "*", features = ["rustls-tls"] }
magnus = "0.6"
serde_json = "1.0"
rb-sys = { version = "*", default-features = false, features = ["ruby-static"] }
