[package]
name = "rust_json_schema"
version = "0.1.0"
edition = "2021"
authors = ["Taylor Thurlow <thurlow@hey.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
jsonschema = "0.20.0"
magnus = "0.7"
serde_json = "1.0"
rb-sys = { version = "*", default-features = false, features = ["ruby-static"] }
